--- a/LauraLopezPicas&FijasV1/.project
+++ b/LauraLopezPicas&FijasV1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LauraLopezPicas&amp;FijasV1</name>
+	<name>LopezSerratoAriza</name>
 	<comment></comment>
 	<projects>
 	</projects>
